--- a/wc/package.json
+++ b/wc/package.json
@@ -1,10 +1,13 @@
 {
   "name": "wc",
+  "bin": {
+    "ccwc": "./dist/index.js"
+  },
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +16,7 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1"
+    "@types/node": "^20.6.3",
+    "nodemon": "^3.0.1"
   }
 }
